<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    >
    	
    <RelativeLayout android:id="@+id/buttonLayout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:paddingTop="100dp"
    	android:paddingBottom="10dp"
    	android:layout_alignParentLeft="true"
    	android:gravity="center_horizontal"
    	>
    	
    	<ToggleButton android:id="@+id/onOffSwitch"
    		android:textOn="@string/switch_on"
    		android:textOff="@string/switch_off"
    		android:layout_width="100dp"
    		android:layout_height="55dp"
    		android:layout_alignParentLeft="true"
    		/>
    
    	<Button android:id="@+id/setReplyMessage"
    		android:text="Set Reply Message"
    		android:layout_width="100dp"
    		android:layout_height="57dp"
    		android:layout_toRightOf="@+id/onOffSwitch"
    		/>
    </RelativeLayout>
    
    <TextView android:id="@+id/responseTitle"
    	android:text="@string/response_title"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textSize="20dp"
    	android:layout_gravity="center_horizontal"
    	/>
    
    <TextView android:id="@+id/response" 
    	android:text=""
    	android:singleLine="false"
    	android:padding="20dp"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="1dp"
    	android:gravity="center_horizontal"
    	android:background="@android:drawable/alert_dark_frame"
    	/>
</LinearLayout>